# ultranotei-desktop

./: .clang-format  .cmake-format  .gitignore  .gitmodules  ANALYSIS_REPORT.md  BUILD_INSTRUCTIONS.md  CHANGELOG  CMakeLists.txt  COPYING  CRITICAL_FIXES_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QREncode.cmake  README.md  SUMMARY.md  UltraNoteInfinity.cmake  UltraNoteInfinity.cmake.bak  UltraNoteWallet.cmake  build-macos-release.sh  build-win-release.bat  build_warnings.txt  install.sh  tor_build.sh
.github/workflows/: macOS.yml  ubuntu18.yml  ubuntu20.yml  ubuntu22.yml  windows.yml
contrib/ubuntu/: README.md  build.sh
languages/: CMakeLists.txt  UltraNoteInfinity_cn.ts  UltraNoteInfinity_ru.ts  UltraNoteInfinity_tr.ts
src/: AliasProvider.cpp  AliasProvider.cpp.backup  AliasProvider.h  CommandLineParser.cpp  CommandLineParser.h  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  ErrorLogger.cpp  ErrorLogger.h  HTTPManager.cpp  HTTPManager.h  JsonHandler.cpp  JsonHandler.h  LoggerAdapter.cpp  LoggerAdapter.h  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  Settings.cpp  Settings.h  ShutdownController.cpp  ShutdownController.h  SignalHandler.cpp  SignalHandler.h  StratumClient.cpp  StratumClient.h  TranslatorManager.cpp  TranslatorManager.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  Worker.h  cryptonotewallet.rc  fiatconverter.cpp  fiatconverter.h  main.cpp  miniupnpcstrings.h  (+12 more)
src/Mnemonics/: electrum-words.cpp
src/gui/: AboutDialog.cpp  AboutDialog.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AddressBookModel.h  AnimatedLabel.cpp  AnimatedLabel.h  BrowserUtils.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ConnectionSettings.cpp  ConnectionSettings.h  DepositDetailsDialog.cpp  DepositDetailsDialog.h  DepositListModel.cpp  DepositListModel.h  DepositModel.cpp  DepositModel.h  DepositsFrame.cpp  DepositsFrame.h  ExitWidget.cpp  ExitWidget.h  ImportKeyDialog.cpp  ImportKeyDialog.h  InvoiceService.cpp  InvoiceService.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  Message.cpp  Message.h  MessageAddressFrame.cpp  MessageAddressFrame.h  MessageAttachmentFrame.cpp  MessageAttachmentFrame.h  MessageDetailsDialog.cpp  MessageDetailsDialog.h  (+77 more)
src/gui/ui/: aboutdialog.ui  connectionsettingsdialog.ui  mainwindow.ui  messageattachmentframe.ui  messagedetailsdialog.ui  newnodedialog.ui  sendmessageframe.ui
src/images/: UltraNoteLogo.icns  cryptonote.icns
src/qml/: UltraNoteInfinity_en.ts
src/qml/QtImports/QtQuickControls2/Material/: BoxShadow.qml  ElevationEffect.qml  RectangularGlow.qml  qmldir
src/qml/UltraNote/UI/: AppWindow.qml  LegacyTranslations.qml  Splash.qml  Theme.qml  qmldir  qtquickcontrols2.conf
src/qml/UltraNote/UI/Controls/: BrowserDialog.qml  BrowserWindow.qml  CustomCheckBox.qml  DownloadView.qml  UNAmountBox.qml  UNAnimatedImage.qml  UNBalanceReport.qml  UNBalanceReportDialog.qml  UNBalanceReportRow.qml  UNButton.qml  UNCheckBox.qml  UNDialog.qml  UNDialogInfinity.qml  UNDrawerListItem.qml  UNDrawerMainActionButton.qml  UNElevatedPanel.qml  UNFluidDrawer.qml  UNFontsFactory.qml  UNFramelessApplicationWindow.qml  UNHorizontalSeparator.qml  UNIcon.qml  UNImage.qml  UNLabel.qml  UNLabelSelectable.qml  UNLayoutSpacer.qml  UNMenu.qml  UNMenuItem.qml  UNMouseArea.qml  UNPage.qml  UNRadioButton.qml  UNRadioButtonInfinity.qml  UNScrollIndicator.qml  UNSlider.qml  UNSpinBox.qml  UNStatusBarMenuButton.qml  UNStepSlider.qml  UNTableHeaderLabel.qml  UNTableView.qml  UNTextArea.qml  UNTextField.qml  (+3 more)
src/qml/UltraNote/UI/Controls/Private/: UNWindowStatusBar.qml  qmldir
src/qml/UltraNote/UI/Dialogs/: AddressBookDialog.qml  ChangePasswordDialog.qml  ConnectionSettingsDialog.qml  DepositDetailsDialog.qml  DownloadProgressDialog.qml  FiatSymbolDialog.qml  ImportPrivateKeyDialog.qml  ImportPrivateKeysDialog.qml  ImportSeedDialog.qml  ImportTrackingWalletDialog.qml  ImportWalletDialog.qml  InvoiceDetailsDialog.qml  LanguageSettingDialog.qml  MessageDetailsDialog.qml  MessageDialog.qml  NewAddressDialog.qml  NewRemoteNodeDialog.qml  OptimizeTransactionsDialog.qml  RequestPasswordDialog.qml  RestartWalletDialog.qml  SeedTrackingKeyDialog.qml  TransactionDetailsDialog.qml  UploadProgressDialog.qml  qmldir
src/qml/UltraNote/UI/Pages/: AddressBookPage.qml  BrowserPage.qml  DepositsPage.qml  InvoicesPage.qml  MessagesPage.qml  MiningPage.qml  ReceivePage.qml  SearchPage.qml  SendInvoicePage.qml  SendMessagePage.qml  SendPage.qml  TransactionsPage.qml  qmldir
